@@ -184,6 +184,10 @@
 # define ACE_LACKS_INET_NTOA
 # define ACE_LACKS_GET_BCAST_ADDR
 # define ACE_LACKS_GETSERVBYNAME
+# define ACE_LACKS_ACCEPT
+# define ACE_LACKS_CONNECT
+# define ACE_LACKS_GETPEERNAME
+# define ACE_LACKS_GETSOCKNAME
 
 // Missing OS features
 # define ACE_LACKS_UNIX_SYSLOG
